# generative_ai

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json  statusline.sh
.claude/skills/animated-svg-to-gif/: SKILL.md
.claude/skills/animated-svg-to-gif/scripts/: .gitignore  svg2anim.mjs  svg2video.sh
.claude/skills/pyc-decompile/: SKILL.md  reference.md
.claude/skills/pyc-decompile/scripts/: _pyc.py  disasm.py  find_source.py  find_targets.py  introspect.py  preflight.py  verify.py
llm/: rag_enhancement.md
llm/notebook/agent/: OAI_CONFIG_LIST  agentchat_oai_assistant_twoagents_basic.ipynb  agentchat_oai_code_interpreter.ipynb
llm/notebook/agents/agno/: agent_memory.ipynb  sample_agents.ipynb
llm/notebook/agents/agno/tmp/: agent.db  data.db  memory.db
llm/notebook/agents/auto_gen/: OAI_CONFIG_LIST  agentchat_oai_assistant_groupchat.ipynb
llm/notebook/agents/auto_gen/groupchat/: github_data.csv  github_data_fetch.py
llm/notebook/agents/aws_bedrock/: bedrock_chat.ipynb  context_1m.py  function_calling_with_converse.ipynb  hello_bedrock.ipynb  langgraph-multimodal.ipynb  on_the_origin_of_species.txt
llm/notebook/agents/evaluation/: langgraph_sql_agent_eval.ipynb
llm/notebook/agents/gemini/: litellm_ssl.py  nano_banana.py  tool_calling.ipynb
llm/notebook/agents/google_adk/multi_tool_agent/: agent.py  agent_team.py
llm/notebook/agents/lang_graph/multi_agent/: agent_supervisor.ipynb  hierarchical_agent_teams.ipynb  multi-agent-collaboration.ipynb
llm/notebook/agents/lang_mem/: langmem_introduction.ipynb  procedural_memory.ipynb  semantic_memory.ipynb
llm/notebook/agents/llm_providers/: deepseek_langchain.py  fireworks.ipynb  google_ai_studio.py  lmstudio.ipynb  nim.ipynb
llm/notebook/agents/mem0/: mem0_cloud.ipynb  mem0_examples.ipynb  mem0_graph_memory.ipynb  mem0_langgraph.ipynb  memo_autogen.ipynb
llm/notebook/agents/open_ai/: gpt_image_4o.py  gpt_image_http.py  gpt_image_library.py  multimodal_inputs_prompts.ipynb  openai_function_calling.ipynb
llm/notebook/agents/sql/: spark_azure.py  sql_qa.ipynb
llm/notebook/classification/infer_retrieve_rerank/: infer_retrieve_rerank.ipynb
llm/notebook/coding/: hello_world.py
llm/notebook/eda/: HistoricalPrices.csv  chunk_size.csv  parent_chunk_size.csv  sample_charts.ipynb
llm/notebook/enhanced_prompt/: optimized_react_gpt41.json  optimized_react_gpt41_nano.json
llm/notebook/enhanced_retriever/: 5_Levels_Of_Text_Splitting.ipynb  agentic_chunker.py  bm25_retriever.ipynb  cohere_rerank.ipynb  cohere_rerank_df_search.ipynb  multivector_retriever.ipynb  opensource_rerank.ipynb  semantic_chunking_tutorial.ipynb
llm/notebook/extraction/: langextract_sample.ipynb  llama_extract_demo.ipynb  openai_functions.ipynb
llm/notebook/extraction/test_output/: extraction_results.jsonl  outputvisualization.html
llm/notebook/graph/: agent_supervisor.ipynb  introduction.ipynb  langgraph_adaptive_rag.ipynb  langgraph_code_assistant.ipynb  langgraph_code_assistant_mistral.ipynb  multi-agent-collaboration.ipynb  structured_tool_call.ipynb
llm/notebook/graph/customer-support/: customer-support-2.ipynb  customer-support-3.ipynb  customer-support.ipynb
llm/notebook/graph/graphdb/: ms_graphrag.ipynb  ms_graphrag_import.ipynb
llm/notebook/graph/hil/: breakpoints.ipynb  edit-graph-state.ipynb  time-travel.ipynb  wait-user-input.ipynb
llm/notebook/graph/llm-compiler/: LLMCompiler.ipynb
llm/notebook/graph/multiple_agents/: builtin_multi_agents.ipynb  hierarchical_agent_teams.ipynb
llm/notebook/graph/persistence/: add-summary-conversation-history.ipynb  delete-messages.ipynb  manage-conversation-history.ipynb  persistence.ipynb  persistence_mongodb.ipynb  persistence_postgres.ipynb  persistence_postgres_isolated_package.ipynb  persistence_redis.ipynb
llm/notebook/graph/plan-and-execute/: plan-and-execute.ipynb
llm/notebook/graph/rag/: langgraph_agentic_rag.ipynb
llm/notebook/graph/rewoo/: rewoo.ipynb
llm/notebook/graph/subgraph/: streaming-subgraphs.ipynb  subgraph-persistence.ipynb  subgraph-transform-state.ipynb  subgraph.ipynb  subgraphs-manage-state.ipynb
llm/notebook/guardrails/: sample_validators.ipynb
llm/notebook/langchain01/: agents.ipynb  composability.ipynb  observability.ipynb  output_parsers.ipynb  retrieval.ipynb  streaming.ipynb
llm/notebook/mcp/: claude_desktop_config.json  langgraph-mcp-sse.py  langgraph-mcp-stdio.py  langgraph_mcp.ipynb  llms_full.txt  mcp_adapters_client.ipynb  mcp_adapters_weather_server.py
llm/notebook/rlhf/: learned_prompt_optimization.ipynb  meta_prompt.ipynb
llm/notebook/sandbox/: sample_daytona.py
llm/notebook/superlink/: recommendations_e_commerce.ipynb
llm/rag/: README.md
spark_ai/: .env.example  Dockerfile  README.md  docker-compose.yml  langgraph.json  pyproject.toml
spark_ai/media/: lakehouse_data_analytics_genai.excalidraw
spark_ai/spark_agent/: custom_exceptions.py  lakehouse_agent.py  lakehouse_tool.py  search_agent.py  spark_prompt.py  spark_sql.py  spark_tool.py  spark_toolkit.py
spark_ai/spark_agent/data/: Accounts.csv  Contacts.csv  Leads.csv  Opportunities.csv
