[project]
name = "generative_ai"
version = "0.1.0"
description = "Generative AI"
authors = [
    { name = "Tam Nguyen", email = "npt.dc@outlook.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pip>=26.1.2",
    # "cohere>=5.11.0",
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.9.0",
    # "fastapi>=0.115.7",
    "pydantic-settings>=2.14.1",
    # "pyautogen>=0.3.1",
    "langmem>=0.0.30",
    "langchain>=1.3.10",
    "langgraph>=1.2.6",
    "langgraph-supervisor>=0.0.31",
    "langgraph-swarm>=0.1.0",
    "langchainhub>=0.1.21",
    "langgraph-cli[inmem]>=0.4.30",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langchain-openai>=1.3.2",
    "langchain-cohere>=0.6.0",
    "langchain-mistralai>=1.1.5",
    "langchain-anthropic>=1.4.6",
    "langchain-aws>=1.6.0",
    "langchain-fireworks>=1.3.1",
    "langchain-deepseek>=1.1.0",
    "langchain-postgres>=0.0.17",
    "langchain-experimental>=0.4.2",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-google-genai>=4.2.5",
    # "langchain-google-vertexai>=2.0.18",
    "langchain-nvidia-ai-endpoints>=1.4.1",
    # "llama-index>=0.11",
    "llama-index>=0.14.22",
    # "llama-extract>=0.1.0",
    # "llama-index-retrievers-bm25>=0.5.0",
    # "superlinked>=10.0.0",
    "redis>=8.0.0",
    "neo4j==5.28.1",
    # "netgraph>=4.13.2",
    # "pymongo>=4.10.1",
    "psycopg[binary,pool]>=3.3.4",
    "psycopg2-binary>=2.9.12",
    # "pyodbc>=5.2.0",
    # "mem0ai>=0.1.13",
    # "pyspark>=3.5.3",
    # "delta-spark>=3.2.1",
    "mcp[cli]>=1.28.0",
    "guardrails-ai>=0.10.2",
    "retry>=0.9.2",
    "types-PyYAML>=6.0.12.20260518",
    "types-requests>=2.33.0.20260518",
    "types-python-dateutil>=2.9.0.20260518",
    "agno>=2.6.18",
    "yfinance>=1.4.1",
    "duckduckgo-search>=8.1.1",
    "google-genai>=2.8.0",
    "googlesearch-python>=1.3.0",
    "google-adk>=2.3.0",
    "litellm>=1.89.2",
    "vllm>=0.23.0 ; sys_platform == 'linux'",
    "dspy>=3.2.1",
    "mlflow>=3.14.0",
    "langextract>=1.5.0",
    "daytona>=0.187.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.18",
    "black>=26.5.1",
    "isort>=8.0.1",
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pre-commit>=4.6.0",
    "nbqa>=1.9.1",
    "notebook>=7.6.0",
    "jupyterlab>=4.6.0",
    "ipywidgets>=8.1.8",
    "theme-darcula>=4.0.0",
    "seaborn>=0.13.2",
    # "graphdatascience>=1.13",
    "python-dotenv>=1.2.2",
    # "numexpr>=2.10.0",
    "faiss-cpu>=1.14.3",
    # "rank_bm25==0.2.2",
    # "chromadb>=0.4.22",
    # "deepeval>=0.20.10",
    # "kor>=1.0.0",
    # "altair>=5.4.1",
    # "pysbd>=0.3.4",
    "datasets>=5.0.0",
    "sentence_transformers>=5.6.0",
    # "pgvector>=0.2.5",
    "tiktoken>=0.13.0",
    "pdf2image>=1.17.0",
    "pdfminer-six>=20260107",
    # "python-poppler>=0.4.1",
    "opencv-python>=4.13.0.92",
    # "vowpal-wabbit-next>=0.7.0",
    "tavily-python>=0.7.26",
    # "azure-identity>=1.18.0",
    "google-search-results>=2.4.2",
    "google-api-python-client>=2.197.0",
    "unstructured[docx,pdf]>=0.23.1",
]

[tool.black]
line-length = 88

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
ignore_missing_imports = true

[tool.pydocstyle]
ignore = ["D104", "D107", "D212", "D203"]

[tool.sqlfmt]
line_length = 120
exclude=["target/**/*", "dbt_packages/**/*", "notebooks/**/*", "macros/**/*"]

[tool.sqlfluff]

[tool.sqlfluff.core]
max_line_length = 120
templater = "jinja"
sql_file_exts = ".sql,.sql.j2,.dml,.ddl"
exclude_rules = "RF02"

[tool.sqlfluff.indentation]
indented_joins = false
indented_using_on = true
template_blocks_indent = false

[tool.sqlfluff.templater]
unwrap_wrapped_queries = true

[tool.sqlfluff.templater.jinja]
apply_dbt_builtins = true

[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "lower"
extended_capitalisation_policy = "lower"

[tool.ruff]
target-version = "py312"
# Same as Black.
line-length = 88

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
#select = ["AIR", "ARG", "B", "D", "E", "F", "I", "ICN", "N", "PD", "PT", "PTH", "RET", "TD", "TID", "W"]
#select = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "EM", "ERA", "EXE", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "UP", "YTT"]
select = ["ALL"]
ignore = [
    "ANN",      # Type hints related, let mypy/pyright handle these.
    "COM812",   # "Trailing comma missing". If black is happy, I'm happy.
    "D104",     # "Missing docstring in public package"
    "D107",     # "Missing docstring in __init__"
    "D212",     # "Multi-line docstring summary should start at the first line"
    "D203",     # "1 blank line required before class docstring"
    "DTZ001",   # "The use of datetime.datetime() without tzinfo argument is not allowed". It's OK for Airflow DAG start_date
    "E501",     # "Line too long". If black is happy, I'm happy.
    "EM101",    # "Exception must not use a string literal, assign to variable first". It's OK
    "EM102",    # "Exception must not use an f-string literal, assign to variable first". It's OK
    "FBT003",   # "Boolean positional value in function call". I need to defind Spark StructField not NULL columns
    "FIX002",   # "Line contains TODO, consider resolving the issue". It's OK
    "G004",     # "Logging statement uses f-string". Will try to logger.info("Hello, %s!", name)
    "INP001",   # "File {filename} is part of an implicit namespace package. Add an __init__.py". dags folder doesn't need __init__.py
    "PLR0913",  # "Too many arguments to function call ({c_args} > {max_args})". It's OK for some functions
    "RET504",   # "Unnecessary variable assignment before return statement". It's OK to make result clearer

    # Should be commented for new project
#    "ARG002",   # "Unused method argument: {name}". Will add noqa for Airflow context
#    "DTZ002",   # "The use of datetime.datetime.today() is not allowed, use datetime.datetime.now(tz=) instead". Will improve later
#    "DTZ007",   # "The use of datetime.datetime.strptime() without %z must be followed by .replace(tzinfo=) or .astimezone()". Will improve later
#    "DTZ005",   # "The use of datetime.datetime.now() without tz argument is not allowed". Will improve later
#    "DTZ011",   # "The use of datetime.date.today() is not allowed, use datetime.datetime.now(tz=).date() instead". Will improve later
#    "FBT",      # "flake8-boolean-trap". Will improve later
#    "PLC1901",  # "{} can be simplified to {} as an empty string is falsey". Will improve later
#    "PLR2004",  # "Magic value used in comparison, consider replacing {value} with a constant variable". Will improve later
#    "PTH123",   # "open() should be replaced by Path.open()". Will improve later
#    "S113",     # "Probable use of requests call with timeout set to {value}". Will add timeout later
#    "S608",     # "Possible SQL injection vector through string-based query construction". Will modify later
#    "SIM115",   # "Use context handler for opening files". Will improve later
#    "SIM117",   # "Use a single with statement with multiple contexts instead of nested with statements". Will modify later
#    "TRY002",   # "Create your own exception". Will improve later
#    "TRY003",   # "Avoid specifying long messages outside the exception class". Will improve later
#    "TRY004",   # "Prefer TypeError exception for invalid type". Will improve later
#    "TRY201",   # "Use raise without specifying exception name". Will improve later
#    "TRY302",   # "Remove exception handler; error is immediately re-raised". Will improve later
#    "TRY400",   # "Use logging.exception instead of logging.error. Will modify later

    # Ignore example in jerry-git/pytest-split
#    "S101",     # "Use of `assert` detected"
#    "SIM108",   # "Use ternary operator ...". Ternary is harmful for readability in some cases.
#    "TRY003",   # "Avoid specifying long messages outside the exception class"
    ]

# Allow autofix for all enabled rules (when `--fix`) is provided.
# fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "notebooks",
    "venv",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"llm/notebook/*" = ["D100"]

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.format]
docstring-code-format = true
